#9 Achtergrond kleur van scroll aangepast
Feedback van @AnoukdeRooij24 @ambersr @julia-stevens

--- a/public/styles/about-us.css
+++ b/public/styles/about-us.css
@@ -172,7 +172,7 @@
 
 .logo-marquee {
     overflow: hidden;
-    background-color: var(--primary-highlight);
+    background-color: var(--secondary-light);
     border: 1px solid var(--primary-dark);
     border-radius: var(--border-radius-md);
     padding: 1.5rem 0;
