--- a/public/styles/webinar-detail.css
+++ b/public/styles/webinar-detail.css
@@ -11,6 +11,13 @@
 }
 
 /* MARK: Loading state */
+.send-button {
+    position: relative; 
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    transition: background 0.3s ease;
+}
 
 /* tekst in de button */
 .send-button__text {
@@ -28,9 +35,13 @@
 .send-button--loading::after {
     content: "";
     position: absolute;
+    top: 50%;
+    left: 50%;
     width: 1rem;
     height: 1rem;
-    margin: auto;
+    margin: -0.5rem 0 0 -0.5rem;
+    border: 4px solid transparent;
+    border-top-color: var(--alt-text-color); 
     border-radius: 50%;
     animation: button-loading-spinner 1s ease infinite;
 }
@@ -40,7 +51,6 @@
     from {
         transform: rotate(0turn);
     }
-
     to {
         transform: rotate(1turn);
     }
