--- a/views/contourings.liquid
+++ b/views/contourings.liquid
@@ -1,6 +1,12 @@
 {% assign pageTitle = "Contourings | Oncollaboration" %}
 {% include "partials/head.liquid" %}
 
+<ul class="breadcrumb-contourings">
+    <li><a href="/">Home &rsaquo;</a></li>
+    <li><a href="/contourings">Contourings</a></li>
+</ul>
+
+
 <h1 class="section-title">Contourings</h1>
 
 <div class="contourings-grid">
